Testing Patch for Bug#115988 - Too Much Disk Read on Startup, penalizing deployments with many tables (1M+).